--- a/index.html
+++ b/index.html
@@ -1,9 +1,66 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Title</title>
-  </head>
-  <body>
-    <p>Paragraph</p>
-  </body>
+<html lang="en-ca">
+<head>
+  <meta charset="utf-8" />
+  <meta name="description" content="Volume of a Sphere, with JS" />
+  <meta name="keywords" content="mths, ics2o" />
+  <meta name="author" content="Julianne Leblanc-Peltier" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_purple-light_green.min.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+  <link rel="manifest" href="site.webmanifest" />
+  <title>Volume of a Sphere, with JS</title>
+</head>
+<body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="./js/script.js"></script>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">Volume of a Sphere, with JS</span>
+      </div>
+    </header>
+    <div class="content">
+      <div class="row">
+        <div class="column">
+          <p class="bigger-text">Formula <br /><br /> V = 4/3 π r³</p>
+          <p>Please enter integers for dimensions:</p>
+          <!-- Numeric Textfield -->
+          <form action="#">
+            Radius:
+            <div class="mdl-textfield mdl-js-textfield">
+              <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="radius-of-sphere"
+                step="0.01" />
+              <label class="mdl-textfield__label" for="sample2">Number...</label>
+              <span class="mdl-textfield__error">Input is not a number!</span>
+            </div>
+            mm
+            <br /> <br />
+            <!-- Accent-colored raised button with ripple -->
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+              onclick="myButtonClicked()" type="button">
+              Calculate Volume
+            </button>
+          </form>
+          <div>
+            <p>
+              <br />
+              Volume is: <span id="volume-of-sphere"></span>
+            </p>
+          </div>
+        </div>
+        <div class="column">
+          <br />
+          <br />
+          <br />
+          <img src="./images/volume-of-sphere.png" alt="sphere" class="sphere-image" />
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
